Fix weird overflow on wide tablet screen sizes

--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,31 @@
 }
 body {
   margin: 0;
+  width: 100vw;
 }
 #app {
   max-width: 100vw;
   margin: 0 auto;
+}
+
+.container {
+  box-sizing: border-box;
+  width: 95vw;
+  margin: 0 auto;
+}
+
+@media only screen
+and (min-width: 496px) {
+  .container {
+    width: auto;
+    padding: 0 2rem;
+    margin: 0 auto;
+  }
+}
+
+@media only screen
+and (min-width: 992px) {
+  .container {
+    width: 62rem;
+  }
 }
